V00915696_A1/ulNoActionsParser.java
// $ANTLR 3.5.2 ulNoActions.g 2020-01-27 23:21:43

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class ulNoActionsParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHARCONSTANT", "COMMENT", "ELSE", 
		"FALSE", "FLOATCONSTANT", "ID", "IF", "INTEGERCONSTANT", "PRINT", "PRINTLN", 
		"RETURN", "STRINGCONSTANT", "TRUE", "WHILE", "WS", "'('", "')'", "'*'", 
		"'+'", "','", "'-'", "';'", "'<'", "'='", "'=='", "'['", "']'", "'boolean'", 
		"'char'", "'float'", "'int'", "'string'", "'void'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int CHARCONSTANT=4;
	public static final int COMMENT=5;
	public static final int ELSE=6;
	public static final int FALSE=7;
	public static final int FLOATCONSTANT=8;
	public static final int ID=9;
	public static final int IF=10;
	public static final int INTEGERCONSTANT=11;
	public static final int PRINT=12;
	public static final int PRINTLN=13;
	public static final int RETURN=14;
	public static final int STRINGCONSTANT=15;
	public static final int TRUE=16;
	public static final int WHILE=17;
	public static final int WS=18;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ulNoActionsParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ulNoActionsParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return ulNoActionsParser.tokenNames; }
	@Override public String getGrammarFileName() { return "ulNoActions.g"; }


	protected void mismatch (IntStream input, int ttype, BitSet follow)
	        throws RecognitionException
	{
	        throw new MismatchedTokenException(ttype, input);
	}
	public Object recoverFromMismatchedSet (IntStream input,
	                                      RecognitionException e,
	                                      BitSet follow)
	        throws RecognitionException
	{
	        reportError(e);
	        throw e;
	}
	protected Object recoverFromMismatchedToken(
	        IntStream input, int ttype, BitSet follow) throws RecognitionException {
	    throw new MismatchedTokenException(ttype, input);
	  }



	// $ANTLR start "program"
	// ulNoActions.g:40:1: program returns [Program p] : (f= function )+ EOF ;
	public final Program program() throws RecognitionException {
		Program p = null;


		Function f =null;


		    p = new Program();

		try {
			// ulNoActions.g:44:5: ( (f= function )+ EOF )
			// ulNoActions.g:44:7: (f= function )+ EOF
			{
			// ulNoActions.g:44:7: (f= function )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= 31 && LA1_0 <= 36)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// ulNoActions.g:44:8: f= function
					{
					pushFollow(FOLLOW_function_in_program41);
					f=function();
					state._fsp--;
					if (state.failed) return p;
					if ( state.backtracking==0 ) { p.addFunction(f); }
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return p;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			match(input,EOF,FOLLOW_EOF_in_program47); if (state.failed) return p;
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		return p;
	}
	// $ANTLR end "program"



	// $ANTLR start "function"
	// ulNoActions.g:47:1: function returns [Function f] : d= functionDecl b= functionBody ;
	public final Function function() throws RecognitionException {
		Function f = null;


		FunctionDeclaration d =null;
		FunctionBody b =null;

		try {
			// ulNoActions.g:48:5: (d= functionDecl b= functionBody )
			// ulNoActions.g:48:7: d= functionDecl b= functionBody
			{
			pushFollow(FOLLOW_functionDecl_in_function67);
			d=functionDecl();
			state._fsp--;
			if (state.failed) return f;
			pushFollow(FOLLOW_functionBody_in_function71);
			b=functionBody();
			state._fsp--;
			if (state.failed) return f;
			if ( state.backtracking==0 ) { f = new Function(d, b); }
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		return f;
	}
	// $ANTLR end "function"



	// $ANTLR start "functionDecl"
	// ulNoActions.g:51:1: functionDecl returns [FunctionDeclaration fd] : t= compoundType id= identifier '(' (p= formalParams )? ')' ;
	public final FunctionDeclaration functionDecl() throws RecognitionException {
		FunctionDeclaration fd = null;


		Type t =null;
		Identifier id =null;
		FormalParameterList p =null;

		try {
			// ulNoActions.g:52:5: (t= compoundType id= identifier '(' (p= formalParams )? ')' )
			// ulNoActions.g:52:7: t= compoundType id= identifier '(' (p= formalParams )? ')'
			{
			pushFollow(FOLLOW_compoundType_in_functionDecl93);
			t=compoundType();
			state._fsp--;
			if (state.failed) return fd;
			pushFollow(FOLLOW_identifier_in_functionDecl97);
			id=identifier();
			state._fsp--;
			if (state.failed) return fd;
			match(input,19,FOLLOW_19_in_functionDecl99); if (state.failed) return fd;
			// ulNoActions.g:52:41: (p= formalParams )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( ((LA2_0 >= 31 && LA2_0 <= 36)) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// ulNoActions.g:52:41: p= formalParams
					{
					pushFollow(FOLLOW_formalParams_in_functionDecl103);
					p=formalParams();
					state._fsp--;
					if (state.failed) return fd;
					}
					break;

			}

			match(input,20,FOLLOW_20_in_functionDecl106); if (state.failed) return fd;
			if ( state.backtracking==0 ) { fd = new FunctionDeclaration(t, id, p); }
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		return fd;
	}
	// $ANTLR end "functionDecl"



	// $ANTLR start "formalParams"
	// ulNoActions.g:55:1: formalParams returns [FormalParameterList pl] : p= formalParam ( ',' (p= formalParam ) )* ;
	public final FormalParameterList formalParams() throws RecognitionException {
		FormalParameterList pl = null;


		FormalParameter p =null;


		    pl = new FormalParameterList();

		try {
			// ulNoActions.g:59:5: (p= formalParam ( ',' (p= formalParam ) )* )
			// ulNoActions.g:59:7: p= formalParam ( ',' (p= formalParam ) )*
			{
			pushFollow(FOLLOW_formalParam_in_formalParams133);
			p=formalParam();
			state._fsp--;
			if (state.failed) return pl;
			if ( state.backtracking==0 ) { pl.addFormalParameter(p);}
			// ulNoActions.g:59:49: ( ',' (p= formalParam ) )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==23) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// ulNoActions.g:59:50: ',' (p= formalParam )
					{
					match(input,23,FOLLOW_23_in_formalParams137); if (state.failed) return pl;
					// ulNoActions.g:59:54: (p= formalParam )
					// ulNoActions.g:59:55: p= formalParam
					{
					pushFollow(FOLLOW_formalParam_in_formalParams142);
					p=formalParam();
					state._fsp--;
					if (state.failed) return pl;
					if ( state.backtracking==0 ) { pl.addFormalParameter(p);}
					}

					}
					break;

				default :
					break loop3;
				}
			}

			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		return pl;
	}
	// $ANTLR end "formalParams"



	// $ANTLR start "formalParam"
	// ulNoActions.g:61:1: formalParam returns [FormalParameter p] : t= compoundType id= identifier ;
	public final FormalParameter formalParam() throws RecognitionException {
		FormalParameter p = null;


		Type t =null;
		Identifier id =null;

		try {
			// ulNoActions.g:62:5: (t= compoundType id= identifier )
			// ulNoActions.g:62:7: t= compoundType id= identifier
			{
			pushFollow(FOLLOW_compoundType_in_formalParam168);
			t=compoundType();
			state._fsp--;
			if (state.failed) return p;
			pushFollow(FOLLOW_identifier_in_formalParam172);
			id=identifier();
			state._fsp--;
			if (state.failed) return p;
			if ( state.backtracking==0 ) { p = new FormalParameter(t, id); }
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		return p;
	}
	// $ANTLR end "formalParam"



	// $ANTLR start "functionBody"
	// ulNoActions.g:65:1: functionBody returns [FunctionBody body] : '{' (v= varDecl )* (s= statement )* '}' ;
	public final FunctionBody functionBody() throws RecognitionException {
		FunctionBody body = null;


		VariableDeclaration v =null;
		Statement s =null;


		    body = new FunctionBody();

		try {
			// ulNoActions.g:69:5: ( '{' (v= varDecl )* (s= statement )* '}' )
			// ulNoActions.g:69:7: '{' (v= varDecl )* (s= statement )* '}'
			{
			match(input,37,FOLLOW_37_in_functionBody200); if (state.failed) return body;
			// ulNoActions.g:69:11: (v= varDecl )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( ((LA4_0 >= 31 && LA4_0 <= 36)) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// ulNoActions.g:69:12: v= varDecl
					{
					pushFollow(FOLLOW_varDecl_in_functionBody205);
					v=varDecl();
					state._fsp--;
					if (state.failed) return body;
					if ( state.backtracking==0 ) {body.addVariableDeclaration(v);}
					}
					break;

				default :
					break loop4;
				}
			}

			// ulNoActions.g:69:57: (s= statement )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==CHARCONSTANT||(LA5_0 >= FALSE && LA5_0 <= WHILE)||LA5_0==19) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// ulNoActions.g:69:58: s= statement
					{
					pushFollow(FOLLOW_statement_in_functionBody213);
					s=statement();
					state._fsp--;
					if (state.failed) return body;
					if ( state.backtracking==0 ) {body.addStatement(s);}
					}
					break;

				default :
					break loop5;
				}
			}

			match(input,38,FOLLOW_38_in_functionBody218); if (state.failed) return body;
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		return body;
	}
	// $ANTLR end "functionBody"



	// $ANTLR start "identifier"
	// ulNoActions.g:72:1: identifier returns [Identifier id] : i= ID ;
	public final Identifier identifier() throws RecognitionException {
		Identifier id = null;


		Token i=null;

		try {
			// ulNoActions.g:73:5: (i= ID )
			// ulNoActions.g:73:7: i= ID
			{
			i=(Token)match(input,ID,FOLLOW_ID_in_identifier238); if (state.failed) return id;
			if ( state.backtracking==0 ) { id = new Identifier(i.getText()); }
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		return id;
	}
	// $ANTLR end "identifier"



	// $ANTLR start "varDecl"
	// ulNoActions.g:76:1: varDecl returns [VariableDeclaration v] : t= compoundType id= identifier ';' ;
	public final VariableDeclaration varDecl() throws RecognitionException {
		VariableDeclaration v = null;


		Type t =null;
		Identifier id =null;

		try {
			// ulNoActions.g:77:5: (t= compoundType id= identifier ';' )
			// ulNoActions.g:77:7: t= compoundType id= identifier ';'
			{
			pushFollow(FOLLOW_compoundType_in_varDecl260);
			t=compoundType();
			state._fsp--;
			if (state.failed) return v;
			pushFollow(FOLLOW_identifier_in_varDecl264);
			id=identifier();
			state._fsp--;
			if (state.failed) return v;
			match(input,25,FOLLOW_25_in_varDecl266); if (state.failed) return v;
			if ( state.backtracking==0 ) { v = new VariableDeclaration(t, id); }
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		return v;
	}
	// $ANTLR end "varDecl"



	// $ANTLR start "compoundType"
	// ulNoActions.g:80:1: compoundType returns [Type t] : (t1= type |t2= type '[' size= intlit ']' );
	public final Type compoundType() throws RecognitionException {
		Type t = null;


		Type t1 =null;
		Type t2 =null;
		IntegerLiteral size =null;

		try {
			// ulNoActions.g:81:5: (t1= type |t2= type '[' size= intlit ']' )
			int alt6=2;
			switch ( input.LA(1) ) {
			case 34:
				{
				int LA6_1 = input.LA(2);
				if ( (LA6_1==ID) ) {
					alt6=1;
				}
				else if ( (LA6_1==29) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return t;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 33:
				{
				int LA6_2 = input.LA(2);
				if ( (LA6_2==ID) ) {
					alt6=1;
				}
				else if ( (LA6_2==29) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return t;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 32:
				{
				int LA6_3 = input.LA(2);
				if ( (LA6_3==ID) ) {
					alt6=1;
				}
				else if ( (LA6_3==29) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return t;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 35:
				{
				int LA6_4 = input.LA(2);
				if ( (LA6_4==ID) ) {
					alt6=1;
				}
				else if ( (LA6_4==29) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return t;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 31:
				{
				int LA6_5 = input.LA(2);
				if ( (LA6_5==ID) ) {
					alt6=1;
				}
				else if ( (LA6_5==29) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return t;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 5, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 36:
				{
				int LA6_6 = input.LA(2);
				if ( (LA6_6==ID) ) {
					alt6=1;
				}
				else if ( (LA6_6==29) ) {
					alt6=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return t;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 6, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return t;}
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// ulNoActions.g:81:7: t1= type
					{
					pushFollow(FOLLOW_type_in_compoundType291);
					t1=type();
					state._fsp--;
					if (state.failed) return t;
					if ( state.backtracking==0 ) { t = t1; }
					}
					break;
				case 2 :
					// ulNoActions.g:82:7: t2= type '[' size= intlit ']'
					{
					pushFollow(FOLLOW_type_in_compoundType303);
					t2=type();
					state._fsp--;
					if (state.failed) return t;
					match(input,29,FOLLOW_29_in_compoundType305); if (state.failed) return t;
					pushFollow(FOLLOW_intlit_in_compoundType309);
					size=intlit();
					state._fsp--;
					if (state.failed) return t;
					match(input,30,FOLLOW_30_in_compoundType311); if (state.failed) return t;
					if ( state.backtracking==0 ) { t = new ArrayType(t2, size); }
					}
					break;

			}
		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		return t;
	}
	// $ANTLR end "compoundType"



	// $ANTLR start "type"
	// ulNoActions.g:85:1: type returns [Type t] : ( 'int' | 'float' | 'char' | 'string' | 'boolean' | 'void' );
	public final Type type() throws RecognitionException {
		Type t = null;


		try {
			// ulNoActions.g:86:5: ( 'int' | 'float' | 'char' | 'string' | 'boolean' | 'void' )
			int alt7=6;
			switch ( input.LA(1) ) {
			case 34:
				{
				alt7=1;
				}
				break;
			case 33:
				{
				alt7=2;
				}
				break;
			case 32:
				{
				alt7=3;
				}
				break;
			case 35:
				{
				alt7=4;
				}
				break;
			case 31:
				{
				alt7=5;
				}
				break;
			case 36:
				{
				alt7=6;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return t;}
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}
			switch (alt7) {
				case 1 :
					// ulNoActions.g:86:7: 'int'
					{
					match(input,34,FOLLOW_34_in_type334); if (state.failed) return t;
					if ( state.backtracking==0 ) { t = new IntegerType(); }
					}
					break;
				case 2 :
					// ulNoActions.g:87:7: 'float'
					{
					match(input,33,FOLLOW_33_in_type344); if (state.failed) return t;
					if ( state.backtracking==0 ) { t = new FloatType(); }
					}
					break;
				case 3 :
					// ulNoActions.g:88:7: 'char'
					{
					match(input,32,FOLLOW_32_in_type354); if (state.failed) return t;
					if ( state.backtracking==0 ) { t = new CharType(); }
					}
					break;
				case 4 :
					// ulNoActions.g:89:7: 'string'
					{
					match(input,35,FOLLOW_35_in_type364); if (state.failed) return t;
					if ( state.backtracking==0 ) { t = new StringType(); }
					}
					break;
				case 5 :
					// ulNoActions.g:90:7: 'boolean'
					{
					match(input,31,FOLLOW_31_in_type374); if (state.failed) return t;
					if ( state.backtracking==0 ) { t = new BooleanType(); }
					}
					break;
				case 6 :
					// ulNoActions.g:91:7: 'void'
					{
					match(input,36,FOLLOW_36_in_type384); if (state.failed) return t;
					if ( state.backtracking==0 ) { t = new VoidType(); }
					}
					break;

			}
		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		return t;
	}
	// $ANTLR end "type"



	// $ANTLR start "statement"
	// ulNoActions.g:94:1: statement returns [Statement s] options {backtrack=true; } : (s1= ifStatement |s1= whileStatement |s1= printStatement |s1= returnStatement |s1= assignStatement |e= expr ';' );
	public final Statement statement() throws RecognitionException {
		Statement s = null;


		Statement s1 =null;
		Expression e =null;

		try {
			// ulNoActions.g:96:2: (s1= ifStatement |s1= whileStatement |s1= printStatement |s1= returnStatement |s1= assignStatement |e= expr ';' )
			int alt8=6;
			switch ( input.LA(1) ) {
			case IF:
				{
				alt8=1;
				}
				break;
			case WHILE:
				{
				alt8=2;
				}
				break;
			case PRINT:
			case PRINTLN:
				{
				alt8=3;
				}
				break;
			case RETURN:
				{
				alt8=4;
				}
				break;
			case ID:
				{
				int LA8_6 = input.LA(2);
				if ( (synpred5_ulNoActions()) ) {
					alt8=5;
				}
				else if ( (true) ) {
					alt8=6;
				}

				}
				break;
			case CHARCONSTANT:
			case FALSE:
			case FLOATCONSTANT:
			case INTEGERCONSTANT:
			case STRINGCONSTANT:
			case TRUE:
			case 19:
				{
				alt8=6;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return s;}
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}
			switch (alt8) {
				case 1 :
					// ulNoActions.g:96:4: s1= ifStatement
					{
					pushFollow(FOLLOW_ifStatement_in_statement415);
					s1=ifStatement();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) { s = s1; }
					}
					break;
				case 2 :
					// ulNoActions.g:97:7: s1= whileStatement
					{
					pushFollow(FOLLOW_whileStatement_in_statement427);
					s1=whileStatement();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) { s = s1; }
					}
					break;
				case 3 :
					// ulNoActions.g:98:7: s1= printStatement
					{
					pushFollow(FOLLOW_printStatement_in_statement439);
					s1=printStatement();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) { s = s1; }
					}
					break;
				case 4 :
					// ulNoActions.g:99:7: s1= returnStatement
					{
					pushFollow(FOLLOW_returnStatement_in_statement451);
					s1=returnStatement();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) { s = s1; }
					}
					break;
				case 5 :
					// ulNoActions.g:100:7: s1= assignStatement
					{
					pushFollow(FOLLOW_assignStatement_in_statement463);
					s1=assignStatement();
					state._fsp--;
					if (state.failed) return s;
					if ( state.backtracking==0 ) { s = s1; }
					}
					break;
				case 6 :
					// ulNoActions.g:101:7: e= expr ';'
					{
					pushFollow(FOLLOW_expr_in_statement475);
					e=expr();
					state._fsp--;
					if (state.failed) return s;
					match(input,25,FOLLOW_25_in_statement477); if (state.failed) return s;
					if ( state.backtracking==0 ) { s = new ExpressionStatement(e); }
					}
					break;

			}
		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "statement"



	// $ANTLR start "whileStatement"
	// ulNoActions.g:104:1: whileStatement returns [Statement s] : WHILE '(' e= expr ')' bl= block ;
	public final Statement whileStatement() throws RecognitionException {
		Statement s = null;


		Expression e =null;
		Block bl =null;

		try {
			// ulNoActions.g:105:3: ( WHILE '(' e= expr ')' bl= block )
			// ulNoActions.g:105:5: WHILE '(' e= expr ')' bl= block
			{
			match(input,WHILE,FOLLOW_WHILE_in_whileStatement506); if (state.failed) return s;
			match(input,19,FOLLOW_19_in_whileStatement508); if (state.failed) return s;
			pushFollow(FOLLOW_expr_in_whileStatement512);
			e=expr();
			state._fsp--;
			if (state.failed) return s;
			match(input,20,FOLLOW_20_in_whileStatement514); if (state.failed) return s;
			pushFollow(FOLLOW_block_in_whileStatement518);
			bl=block();
			state._fsp--;
			if (state.failed) return s;
			if ( state.backtracking==0 ) { s = new WhileStatement(e, bl); }
			}

		}

		catch (RecognitionException ex) {
		        reportError(ex);
		        throw ex;
		}

		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "whileStatement"



	// $ANTLR start "printStatement"
	// ulNoActions.g:107:1: printStatement returns [Statement s] : ( PRINT e1= expr ';' | PRINTLN e2= expr ';' );
	public final Statement printStatement() throws RecognitionException {
		Statement s = null;


		Expression e1 =null;
		Expression e2 =null;

		try {
			// ulNoActions.g:108:5: ( PRINT e1= expr ';' | PRINTLN e2= expr ';' )
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==PRINT) ) {
				alt9=1;
			}
			else if ( (LA9_0==PRINTLN) ) {
				alt9=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return s;}
				NoViableAltException nvae =
					new NoViableAltException("", 9, 0, input);
				throw nvae;
			}
